--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-2 mt-5">
                     <h2 class="motto text text-center h2 animation-up pt-1">Serviços Oferecidos</h2>
                 </div>
-                <p class="mx-3 text text-start animation-up">
+                <p class="text text-start animation-up">
                     <strong>Por que escolher o Cartório Ribeirão da Ilha?</strong><br>
                     Atuamos com comprometimento e responsabilidade, fazendo uso de tecnologia para tornar o atendimento mais rápido, eficiente
                     e personalizado. Nossa equipe está preparada para oferecer suporte completo para suas necessidades e facilitar a vida dos cidadãos.
@@ -487,13 +487,11 @@
                     <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern" draggable="false" class="pb-1 mb-2 mt-2">
                     <h2 class="motto text text-center h2 animation-up">Sobre o Cartório Ribeirão da Ilha</h2>
                     <p class="text text-start animation-up">
-                        Desde 1851, a Escrivania de Paz do Distrito do Ribeirão da Ilha presta serviços essenciais à população de Florianópolis, 
-                        garantindo segurança jurídica, agilidade e atendimento personalizado. Nossa serventia tem como atribuições o Tabelionato de 
-                        Notas e o Registro Civil das Pessoas Naturais, sendo um ponto de referência para os cidadãos da região.<br><br>
-                        <strong>Preservação Histórica</strong><br>
-                        A Escrivania de Paz do Ribeirão da Ilha contribui para a preservação da história de Santa Catarina. Em 25 de agosto, entregamos ao 
-                        Museu do Tribunal de Justiça de Santa Catarina um acervo de 23 livros de notas, contendo escrituras lavradas entre 1853 e 1911. 
-                        Esse material é um testemunho da evolução jurídica e social da nossa região.
+                        Desde 1851, a Escrivania de Paz do Distrito do Ribeirão da Ilha atua com excelência em Florianópolis, 
+                        oferecendo serviços de Tabelionato de Notas e Registro Civil das Pessoas Naturais. Referência na região, 
+                        unimos segurança jurídica, agilidade e atendimento humanizado. Também temos orgulho de preservar a história 
+                        catarinense — em 25 de agosto, entregamos ao Museu do TJSC um valioso acervo de livros de notas com registros 
+                        históricos de 1853 a 1911.
                     </p>
                 </div>
                 <div id="carousel-images" class="carousel carousel-fade slide" data-bs-ride="carousel">
@@ -551,39 +549,14 @@
                     <img src="./src/img/logopattern.webp" alt="Ondas amarelas" id="brand-logo-pattern-2" draggable="false" class="pb-1 mb-2">
                     <h2 class="motto text text-center h2 animation-up">Conheça o Titular do <br>Cartório Ribeirão da Ilha</h2>
                     <p class="text animation-up text-start">
-                        <strong>Daniel Rosa de Almeida,</strong>
-                        Tabelião e Registrador Civil das Pessoas Naturais da Escrivania de Paz do Distrito do Ribeirão da Ilha Florianópolis/SC
-                        <br><br>
-                        Com uma trajetória marcada pela dedicação ao direito e à gestão pública, Daniel Rosa de Almeida é Tabelião e Registrador Civil das Pessoas Naturais da 
-                        Escrivania de Paz do Distrito do Ribeirão da Ilha, em Florianópolis/SC. Sua atuação se destaca pela busca constante de inovação e excelência nos serviços 
-                        notariais e registrais, aliando modernidade, segurança jurídica e eficiência no atendimento à população.<br>
-                        <br>
-                        Formado em Direito, dedicou 23 anos à advocacia, com forte atuação no Direito Civil e Empresarial, além de 8 anos de especialização no Direito Imobiliário. 
-                        Sua experiência consolidada o levou a aprofundar seus estudos e concluir, em 2024, o Mestrado pela Universidade Federal Fluminense (UFF), com a dissertação:
-                        📖 Princípios da Fé Pública Registral e da Legitimação no Atual Cenário do Sistema Jurídico Brasileiro Sugestão para Alteração do Enunciado da Súmula nº 84 do STJ.<br>
+                        <strong>Daniel Rosa de Almeida</strong>
+                        é Tabelião e Registrador Civil da Escrivania de Paz do Distrito do Ribeirão da Ilha, em Florianópolis/SC. 
+                        Com mais de 20 anos de experiência no Direito Civil, Empresarial e Imobiliário, é mestre pela UFF e possui 
+                        três pós-graduações, incluindo Direito Notarial e Registral. Atuou como gestor público e concluiu MBA em Gestão 
+                        de Negócios pelo IBMEC. Reconhecido por sua capacidade técnica e de gestão, alia tradição jurídica à inovação, 
+                        oferecendo serviços modernos, seguros e de excelência à população.
                     </p>
                 </div>    
-            </div>
-            <div class="container banner d-sm-block d-md-flex d-lg-flex pb-5">
-                <div class="container banner d-sm-block d-md-flex d-lg-flex pb-5">
-                    <p class="text animation-up text-start">
-                        Além da sólida formação acadêmica, possui três pós-graduações:<br>
-                            ✔ Escola da Magistratura do Estado do Rio de Janeiro (EMERJ) – Formação na turma regular e pós-graduação;<br>
-                            ✔ Direito Notarial e Registral;<br>
-                            ✔ Direito Imobiliário.<br>
-                        <br>
-                        Sua atuação acadêmica também inclui a publicação de artigos, como "A Fé Pública Registral e Seus Reflexos no Direito Brasileiro", publicado na Revista de Direito 
-                        Imobiliário (RDI), contribuindo para o debate jurídico e a evolução do sistema notarial e registral no Brasil.
-                        <br><br>Com um olhar estratégico para gestão e inovação, concluiu o MBA em Gestão de Negócios pelo IBMEC, agregando expertise em governança e eficiência organizacional. 
-                        Sua experiência na administração pública inclui desafios como Diretor das Centrais de Abastecimento do Estado do Rio de Janeiro e Diretor Administrativo e 
-                        Financeiro da Fundação Estadual de Saúde do Estado do Rio de Janeiro, reforçando sua capacidade de gestão e liderança.<br><br>
-                        Atualmente, sua missão no Cartório Ribeirão da Ilha é oferecer um serviço moderno, ágil e seguro, garantindo aos cidadãos atendimento de excelência, 
-                        fundamentado na tradição notarial e na inovação tecnológica.
-                    </p>
-                </div>
-                <div class="container d-flex flex-column container-hero-left mb-5">
-                    <img src="./src/img/titular2.png" draggable="false" alt="Daniel Rosa, Titular do Cartório" loading="lazy" class="img-fluid img-about-left">
-                </div>
             </div>
         </section>
 
@@ -605,21 +578,21 @@
                 <!--Feed Section-->
                 <div class="mt-3">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6 col-lg-4 pt-3">
+                        <div class="col-6 col-lg-4 pt-3">
                             <div class="card">
                                 <div class="card-body pt-5">
                                     <img src="./src/img/feedback1.webp" draggable="false" class="video-reels reels-card mx-auto d-block mb-4">
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4 pt-3">
+                        <div class="col-6 col-lg-4 pt-3">
                             <div class="card">
                                 <div class="card-body pt-5">
                                     <img src="./src/img/feedback2.webp" draggable="false" class="video-reels reels-card mx-auto d-block mb-4">
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4 pt-3">
+                        <div class="col-6 col-lg-4 pt-3">
                             <div class="card">
                                 <div class="card-body pt-5">
                                     <img src="./src/img/feedback3.webp" draggable="false" class="video-reels reels-card mx-auto d-block mb-4">
@@ -635,7 +608,7 @@
                 <!--Reels Section-->
                 <div class="mb-5 mt-1">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6 col-lg-4 pt-3">
+                        <div class="col-6 col-lg-4 pt-3">
                             <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DGQOyqMsopJ/" target="blank" class="card-anchor">
                                 <div class="card">
                                     <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
@@ -648,7 +621,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-sm-12 col-md-0 col-lg-4 d-sm-block d-md-none d-lg-block pt-3">
+                        <div class="col-6 col-lg-4 pt-3">
                             <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFx2sFeRlAn/" target="blank" class="card-anchor">
                                 <div class="card">
                                     <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
@@ -661,7 +634,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4 pt-3">
+                        <div class="col-6 col-lg-4 pt-3">
                             <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFdQp9sxOVz/" target="blank" class="card-anchor">
                                 <div class="card">
                                     <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
@@ -796,56 +769,84 @@
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="false" aria-controls="panelsStayOpen-collapseOne">
-                            Como posso solicitar um serviço do Cartório Ribeirão da Ilha?
+                            Qual horário de funcionamento e telefone?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
                             <div class="accordion-body">
-                                Você pode solicitar nossos serviços das seguintes maneiras:
-                                <ul>
-                                    <br>
-                                    <li>Presencialmente, no nosso endereço: Rua João Sallum, 215, Florianópolis-SC.</li>
-                                    <li>Digitalmente, através do nosso 
-                                        <a href="https://api.whatsapp.com/send/?phone=%2B554833643902&text&type=phone_number&app_absent=0" draggable="false" target="_blank" title="Conversar com Cartório Ribeirão da Ilha no Whatsapp">
-                                            Whatsapp</a>.</li>
-                                </ul>
+                                Funcionamos de segunda a sexta-feira, das 9h às 18h. Não interrompemos para o almoço.<br>
+                                Telefone e WhatsApp: (48) 3364-3902.<br><br>
+                                Plantão exclusivo para ÓBITO, nos finais de semana e dias em que não há expediente, no horário de 8h às 18h pelos telefones exclusivos do plantão:<br>
+                                48 9 8811-2443<br>
+                                48 9 9675-3267<br><br>
+                                Código de Normas Extrajudicial SC: Art. 218. Não haverá expediente no foro extrajudicial: <br>
+                                I - na segunda e terça-feira da semana do Carnaval; <br>
+                                II – na sexta-feira da Semana Santa; <br> 
+                                III – nos dias 24 e 31 de dezembro; <br>
+                                IV – nos dias considerados feriados estaduais e municipais; e
+                                V – nos dias considerados feriados nacionais, constantes no Anexo Único da Resolução CM n. 
+                                22, de 11 de dezembro de 2023. <br><br>
+                                § 1º As serventias extrajudiciais funcionarão normalmente na quinta-feira da Semana Santa, na 
+                                quarta-feira de Cinzas e nos dias 28 de outubro (Dia do Servidor Público) e 8 de dezembro (Dia 
+                                da Justiça). 
+                                § 2º No último dia útil do ano, as serventias extrajudiciais funcionarão se houver atendimento ao 
+                                público nas agências bancárias. 
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-                            Protocolei a minha escritura. Quanto tempo devo aguardar?
+                            Quais são os documentos necessários para lavrar uma escritura de compra e venda?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                No Cartório Ribeirão da Ilha, seguimos um fluxo ágil, transparente e organizado para entregar a sua solicitação.<br>
-                                O processo não costuma durar mais que <strong>3 dias</strong> úteis, e em casos mais urgentes conseguimos protocolar seu cocumento no mesmo dia.
+                                <a href="./src/files/ESCRITURA PÚBLICA DE COMPRA E VENDA.pdf" alt="Documentos necessários para Escritura de Compra e Venda" download target="_blank">
+                                    Clique aqui para ver a documentação necessária.
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                            Preciso de ajuda no prosseguimento da minha escritura. E agora?
+                            Quais são os documentos necessários para lavrar uma escritura de inventário?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                Não se preocupe. O Cartório Ribeirão da Ilha estará presente em todos os passos do seu processo, e o auxiliará em todas as fases do encaminhamento.
+                                <a href="./src/files/ESCRITURA PÚBLICA DE INVENTÁRIO.pdf" alt="Documentos necessários para Escritura Pública de Inventário" download target="_blank">
+                                    Clique aqui para ver a documentação necessária.
+                                </a>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                            Preciso realizar o pagamento integral ao protocolar minha escritura?
+                            Quais são os documentos necessários para lavrar uma escritura de divórcio?
                         </button>
                         </h2>
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
-                                Não. Ao protocolar a sua escritura, serão cobrados apenas 1/3 dos emolumentos. Sendo o valor restante, cobrado ao final do protocolo.
+                                <a href="./src/files/ESCRITURA PÚBLICA DE DIVÓRCIO.pdf" alt="Documentos necessários para Escritura Pública de Divórcio" download target="_blank">
+                                    Clique aqui para ver a documentação necessária.
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion-item">
+                        <h2 class="accordion-header" id="panelsStayOpen-headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive" aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
+                            Quais são os documentos necessários para lavrar uma escritura de divórcio?
+                        </button>
+                        </h2>
+                        <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
+                            <div class="accordion-body">
+                                <a href="./src/files/ESCRITURA PÚBLICA DE CASAMENTO.pdf" alt="Documentos necessários para Escritura Pública de Casamento Civil" download target="_blank">
+                                    Clique aqui para ver a documentação necessária.
+                                </a>
                             </div>
                         </div>
                     </div>
