--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
             }
         }
     </script>
-    <!-- Forced redirect to HTTPS + WWW -->
+    <!-- Forced redirect to HTTPS + WWW 
+    
     <script>
         if (location.protocol !== 'https:' || !location.hostname.startsWith('www.')) {
         const host = 'www.cartorioribeirao.com.br';
         const httpsUrl = 'https://' + host + location.pathname + location.search;
         window.location.replace(httpsUrl);
         }
-    </script>
+    </script>-->
     <!--Google Ads-->
     <script>
         gtag('event', 'conversion', {'send_to': 'AW-981547297/XaygCMPC7bkaEKHyhNQD'});
@@ -578,26 +579,43 @@
                     <a href="https://www.instagram.com/cartorioribeiraodailha/" target="_blank" class="text-reset links-socials">Instagram</a>.
                 </p>
                 <!--Feed Section-->
-                <div class="mt-3">
-                    <div class="row">
-                        <div class="col-6 col-lg-4 pt-3">
-                            <div class="card">
-                                <div class="card-body pt-5">
-                                    <img src="./src/img/feedback1.webp" draggable="false" class="video-reels reels-card mx-auto d-block mb-4">
+                <div id="carouselCards" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="5000">
+                            <div class="d-flex justify-content-between">
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/feedback1.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
+                                </div>
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/feedback2.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
+                                </div>
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/feedback3.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-6 col-lg-4 pt-3">
-                            <div class="card">
-                                <div class="card-body pt-5">
-                                    <img src="./src/img/feedback2.webp" draggable="false" class="video-reels reels-card mx-auto d-block mb-4">
+                        <div class="carousel-item">
+                            <div class="d-flex justify-content-between">
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/feedback4.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-lg-4 pt-3">
-                            <div class="card">
-                                <div class="card-body pt-5">
-                                    <img src="./src/img/feedback3.webp" draggable="false" class="video-reels reels-card mx-auto d-block mb-4">
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/feedback5.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
+                                </div>
+                                <div class="card-carousel">
+                                    <div class="card-carousel-body">
+                                        <img src="./src/img/feedback1.webp" draggable="false" class="video-reels reels-card mx-auto d-block my-2">
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -608,17 +626,17 @@
                     Aqui você encontra informações relevantes sobre o cartório, registros, notificações e muito mais!
                 </p>
                 <!--Reels Section-->
-                <div class="mb-5 mt-1">
+                <div class="mb-5 mt-1 pb-1">
                     <div class="row">
                         <div class="col-6 col-lg-4 pt-3">
                             <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DGQOyqMsopJ/" target="blank" class="card-anchor">
                                 <div class="card">
                                     <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
                                     <div class="card-body">
-                                        <video src="./src/video/media1.mp4" controls webkit-playsinline playsinline
-                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" autoplay="autoplay" loop="loop" muted="muted" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
+                                        <video src="./src/video/media1.mp4" loop muted playsinline controls poster="./src/img/poster2.webp"
+                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
                                         </video>
-                                        <h5 class="card-title text-center">Guia Completo: Passo a passo da Escritura Pública</h5>
+                                        <h5 class="card-title text-center title-reels">Conheça o Site do Cartório Ribeirão da Ilha</h5>
                                     </div>
                                 </div>
                             </a>
@@ -628,27 +646,71 @@
                                 <div class="card">
                                     <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
                                     <div class="card-body">
-                                        <video src="./src/video/media2.mp4" controls webkit-playsinline playsinline
-                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" autoplay="autoplay" loop="loop" muted="muted" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
+                                        <video src="./src/video/media5.mp4" loop muted playsinline controls poster="./src/img/poster1.webp"
+                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
                                         </video>
-                                        <h5 class="card-title text-center">Como regularizar um Imóvel sem Inventário</h5>
+                                        <h5 class="card-title text-center title-reels">1 Ano da audiência de escolha do Cartório Ribeirão da Ilha</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="d-none d-lg-block col-lg-4 pt-3">
+                            <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFdQp9sxOVz/" target="blank" class="card-anchor">
+                                <div class="card">
+                                    <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
+                                    <div class="card-body">
+                                        <video src="./src/video/media3.mp4" loop muted playsinline controls poster="./src/img/poster3.webp"
+                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
+                                        </video>
+                                        <h5 class="card-title text-center title-reels">Escritura Pública de compra e venda de Bens e Imóveis</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="row d-flex flex-row justify-content-evenly">
+                        <div class="col-6 col-lg-4 pt-3">
+                            <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DGQOyqMsopJ/" target="blank" class="card-anchor">
+                                <div class="card">
+                                    <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
+                                    <div class="card-body">
+                                        <video src="./src/video/media4.mp4" loop muted playsinline controls poster="./src/img/poster4.webp"
+                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
+                                        </video>
+                                        <h5 class="card-title text-center title-reels">Guia Completo: Passo a passo da Escritura Pública</h5>
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col-6 col-lg-4 pt-3">
-                            <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFdQp9sxOVz/" target="blank" class="card-anchor">
+                            <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFx2sFeRlAn/" target="blank" class="card-anchor">
                                 <div class="card">
                                     <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
                                     <div class="card-body">
-                                        <video src="./src/video/media3.mp4" controls webkit-playsinline playsinline
-                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" autoplay="autoplay" loop="loop" muted="muted" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
+                                        <video src="./src/video/media2.mp4" loop muted playsinline controls poster="./src/img/poster5.webp"
+                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
                                         </video>
-                                        <h5 class="card-title text-center">Escritura Pública de compra e venda de Bens e Imóveis</h5>
+                                        <h5 class="card-title text-center title-reels">Como regularizar um Imóvel sem Inventário</h5>
                                     </div>
                                 </div>
                             </a>
                         </div>
+                        <!--
+                        <div class="d-none d-lg-block col-lg-4 pt-3">
+                            <a href="https://www.instagram.com/cartorioribeiraodailha/reel/DFdQp9sxOVz/" target="blank" class="card-anchor">
+                                <div class="card">
+                                    <h5 class="card-header p-3 text-center"><img alt="Logo do Instagram" src="./src/img/instagram.webp" class="icon-insta" draggable="false"></h5>
+                                    <div class="card-body">
+                                        <video src="./src/video/media3.mp4" loop muted playsinline controls poster="./src/img/poster1.webp"
+                                            type="video/mp4" class="video-reels reels-card mx-auto d-block mb-4" alt="Vídeo Reels do Cartório Ribeirão da Ilha">
+                                        </video>
+                                        <h5 class="card-title text-center title-reels">Escritura Pública de compra e venda de Bens e Imóveis</h5>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        -->
                     </div>
             </div>
         </section>
@@ -804,7 +866,7 @@
                         </h2>
                         <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                             <div class="accordion-body">
-                                <a href="./src/files/ESCRITURA PÚBLICA DE COMPRA E VENDA.pdf" alt="Documentos necessários para Escritura de Compra e Venda" download target="_blank">
+                                <a href="./src/files/ESCRITURA PÚBLICA DE COMPRA E VENDA.pdf" alt="Documentos necessários para Escritura de Compra e Venda" download>
                                     Clique aqui para ver a documentação necessária.
                                 </a>
                             </div>
@@ -818,7 +880,7 @@
                         </h2>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                <a href="./src/files/ESCRITURA PÚBLICA DE INVENTÁRIO.pdf" alt="Documentos necessários para Escritura Pública de Inventário" download target="_blank">
+                                <a href="./src/files/ESCRITURA PÚBLICA DE INVENTÁRIO.pdf" alt="Documentos necessários para Escritura Pública de Inventário" download>
                                     Clique aqui para ver a documentação necessária.
                                 </a>
                             </div>
@@ -832,7 +894,7 @@
                         </h2>
                         <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
                             <div class="accordion-body">
-                                <a href="./src/files/ESCRITURA PÚBLICA DE DIVÓRCIO.pdf" alt="Documentos necessários para Escritura Pública de Divórcio" download target="_blank">
+                                <a href="./src/files/ESCRITURA PÚBLICA DE DIVÓRCIO.pdf" alt="Documentos necessários para Escritura Pública de Divórcio" download>
                                     Clique aqui para ver a documentação necessária.
                                 </a>
                             </div>
@@ -846,7 +908,7 @@
                         </h2>
                         <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFive">
                             <div class="accordion-body">
-                                <a href="./src/files/CASAMENTO-INFORMAÇÕES-COM-FORMULÁRIO.pdf" alt="Documentos necessários para Escritura Pública de Casamento Civil" download target="_blank">
+                                <a href="./src/files/CASAMENTO-INFORMAÇÕES-COM-FORMULÁRIO.pdf" alt="Documentos necessários para Escritura Pública de Casamento Civil" download>
                                     Clique aqui para ver a documentação necessária e valores.
                                 </a>
                             </div>
